--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Controle de entregas</title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
-<body>
+<body ng-app="principal" ng-controller="entregasCtrl">
+
+
+
+<!-- DEPENDÊNCIAS UTILIZADAS -->
+<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="js/bootstrap.min.js" type="text/javascript"></script>
+<script src="js/angular.min.js" type="text/javascript"></script>
+<script src="js/app.js" type="text/javascript"></script>
+<script src="js/services.js" type="text/javascript"></script>
+<script src="js/controllers.js" type="text/javascript"></script>
+<!-- FIM DEPENDÊNCIAS -->
 
 </body>
 </html>
