--- a/entregas-calculador.html
+++ b/entregas-calculador.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Controle de entregas</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-</head>
-<body ng-app="principal" ng-controller="entregasCtrl">
-
 <div class="container">
-	<titulo></titulo>
+	<div class="row">
+		<div class="page-header">
+			<h1>Controle de entregas</h1>
+		</div>
+	</div>
 	<div class="row well">
 		<div class="col-md-6">
 			<label>Descrição</label>
@@ -45,17 +41,3 @@
 		</table>
 	</div>
 </div>
-
-<!-- DEPENDÊNCIAS UTILIZADAS -->
-<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script src="js/jquery.min.js" type="text/javascript"></script>
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
-<script src="js/angular.min.js" type="text/javascript"></script>
-<script src="js/app.js" type="text/javascript"></script>
-<script src="js/services.js" type="text/javascript"></script>
-<script src="js/controllers.js" type="text/javascript"></script>
-<script src="js/directives.js" type="text/javascript"></script>
-<!-- FIM DEPENDÊNCIAS -->
-
-</body>
-</html>
