--- a/index.html
+++ b/index.html
@@ -23,26 +23,31 @@
 		</div>
 	</div>
 	<div class="row well">
-		<table class="table table-hover table-striped">
-			<thead>
-				<th>Descrição</th>
-				<th>Origem</th>
-				<th>Destino</th>
-				<th>Distância</th>
-				<th>Custo estimado</th>
-				<th>Ações</th>
-			</thead>
-			<tbody>
-				<tr ng-repeat="entrega in entregas track by $index">
-					<td>{{entrega.descricao | uppercase}}</td>
-					<td>{{entrega.origem}}</td>
-					<td>{{entrega.destino}}</td>
-					<td>{{entrega.distancia}}</td>
-					<td>{{entrega.custoEstimado | currency}}</td>
-					<td><button class="btn btn-danger" ng-click="remover()">Remover</button></td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="col-md-12">
+			<input class="form-control" type="text" name="pesquisa" ng-model="pesquisa">
+		</div>
+		<div class="col-md-12">
+			<table class="table table-hover table-striped">
+				<thead>
+					<th>Descrição</th>
+					<th>Origem</th>
+					<th>Destino</th>
+					<th>Distância</th>
+					<th>Custo estimado</th>
+					<th>Ações</th>
+				</thead>
+				<tbody>
+					<tr ng-repeat="entrega in entregas | filter:pesquisa track by $index" >
+						<td>{{entrega.descricao | uppercase}}</td>
+						<td>{{entrega.origem}}</td>
+						<td>{{entrega.destino}}</td>
+						<td>{{entrega.distancia}}</td>
+						<td>{{entrega.custoEstimado | currency}}</td>
+						<td><button class="btn btn-danger" ng-click="remover()">Remover</button></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </div>
 
